tests/compile-fail/report_generics.stderr
error: #[report] does not support generic parameters
 --> tests/compile-fail/report_generics.rs:9:8
  |
9 | fn main<T>() -> Result<(), MyError> {
  |        ^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/report_generics.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/report_generics.rs`
